fixed overflow on blog preview of main page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,7 +275,7 @@ footer p {
   place-items: center;
   align-content: start;
   background-color: rgba(77, 250, 218, 0.2);
-  height: calc(100vh - 130px); /* minus header and footer */ /* 1280 x 720 */
+  min-height: calc(100vh - 130px); /* minus header and footer */ /* 1280 x 720 */
 }
 
 .blog-preview h2 {
@@ -553,7 +553,7 @@ footer p {
   }
 
   .blog-preview {
-    height: calc(100vh - 180px);  /* minus header and footer */
+    min-height: calc(100vh - 180px);  /* minus header and footer */
   }
 
   .blog-preview h2 {
@@ -744,7 +744,7 @@ footer p {
   }
 
   .blog-preview {
-    height: calc(100vh - 230px);  /* minus header and footer */
+    min-height: calc(100vh - 230px);  /* minus header and footer */
   }
 
   .blog-preview h2 {
